# xmr-stak

./: .gitignore  CMakeLists.txt  README.md
spareio-core/: CMakeLists.txt  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerHelper.cpp  NetworkManagerHelper.h  Periodic.cpp  Periodic.h  RegistryHelper.cpp  RegistryHelper.h  ScopeExit.hpp  TelemetryHelper.cpp  TelemetryHelper.h  TimeZone.cpp  TimeZone.h
xmrstak/: jconf.cpp  jconf.hpp  params.hpp  version.cpp
xmrstak/backend/cpu/: autoAdjustHwloc.hpp  minethd.cpp
xmrstak/cli/: cli-miner.cpp
xmrstak/misc/: executor.hpp
